--- a/docs/Examples/BbhInitialData/BbhInitialData.ipynb
+++ b/docs/Examples/BbhInitialData/BbhInitialData.ipynb
@@ -495,7 +495,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "undefined.undefined.undefined"
   },
   "orig_nbformat": 4
  },
